docs/main.css
body {
  width: 100%;
  display: flex;

  flex-direction: column;
  align-items: center;

  font-family: Arial, Helvetica, sans-serif;
}

#content {
  text-align: left;
  max-width: 100%;
}

.title {
  color: var(--solarized-base02);
  text-decoration: underline;
  /* border-bottom: 2px solid var(--solarized-base02); */
  font-weight: bolder;
}

#introtext {
  max-width: 600px;
}

a {
  color: var(--solarized-blue);
}

a:visited {
  color: var(--solarized-violet);
}

h3 {
  text-decoration: underline;
}

.links {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

.title, .data, .code {
  font-family: 'Courier New', Courier, monospace;
}

.data, .summary, .code {
  /* min-height: 100px; */
  width: 400px;
  max-width: 100%;

  padding: 10px 20px;

  margin: 10px;

  background: var(--solarized-base3);
  border: 1px solid var(--solarized-base01);

  border-radius: 5px;
}

.data,
.code {
  font-size: 14px;
  min-height: unset;
  color: var(--solarized-base03);
  color: #000;
}

.data {
  background: var(--solarized-base2);
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.data::after {
  content: "\25B2";
  position: absolute;

  top: 10px;
  right: 10px;

  transform: rotate(180deg);

  transition: transform 0.5s;
}

.data:hover {
  white-space: pre-wrap;
  max-height: 1000px;
}

.data:hover::after {
  transform: rotate(0deg);
}

.code {
  white-space: pre-line;
  color: var(--solarized-base3);
  background: var(--solarized-base03);
}

.section {
  display: flex;
  flex-direction: column;

  align-items: stretch;

  padding: 10px 0;

  border-bottom: 1px solid var(--solarized-base1);
}

.section p {
  font-size: 14px;
}

.example h4 {
  font-size: 16px;
}

.example h5 {
  font-size: 16px;
  font-weight: normal;
}

